Bug 1307185 - Ensure image loads don't short-circuit if the element changed trees since the last load. r=echen a=ritu